fix spacing

--- a/styles/_reports.sass
+++ b/styles/_reports.sass
@@ -295,7 +295,7 @@
       align-items: center
       margin-bottom: 24px
       figure
-        margin: 0 10px 0 0
+        margin: 0 10px 0 0 !important
     .hero_logo
       left: -48px
       top: 50%
